red test : 크루 객체 생성 기능 TDD